[project]
name = "sgl-model-gateway-e2e-tests"
version = "0.1.0"
description = "E2E tests for sgl-model-gateway"
requires-python = ">=3.9"

dependencies = [
  "grpcio",
  "grpcio-health-checking",
  "httpx",
  "openai",
  "pytest",
  "pytest-rerunfailures",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
  "e2e: mark test as end-to-end test requiring GPU workers",
  "slow: mark test as slow-running",
  "thread_unsafe: mark test as incompatible with parallel thread execution",
]
addopts = "-v -s"
# Explicitly disable live log to avoid "---- live log ----" dividers
# We configure logging manually in conftest.py
log_cli = false

# Tests run serially under plain pytest. The pytest-parallel plugin
# (last release 2019) was tried but its thread dispatch leaks fixture
# references between tests, causing model_pool deadlocks; the parallel
# speedup never materialized on a 2-GPU runner since the suite is
# eviction-bound across 5 model:mode combos. ModelPool / GPUAllocator
# remain thread-safe so re-introducing parallelism (xdist or otherwise)
# stays a tractable option.
