load("@rules_python//python:defs.bzl", "py_binary")

exports_files([
    "impact_rules.json",
    "sgl_defs.bzl",
])

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "drift_check",
    srcs = ["gen_deps.py"],
    args = ["--check"],
    data = [
        "//python:pyproject.toml",
        "//python:pyproject_cpu.toml",
        "//python:pyproject_npu.toml",
        "//python:pyproject_other.toml",
        "//python:pyproject_xpu.toml",
    ],
    main = "gen_deps.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "source_graph",
    srcs = ["gen_source_graph.py"],
    main = "gen_source_graph.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "source_graph_check",
    srcs = ["gen_source_graph.py"],
    args = ["--check"],
    main = "gen_source_graph.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "validate_split_graph",
    srcs = [
        "gen_source_graph.py",
        "validate_split_graph.py",
    ],
    data = ["impact_rules.json"],
    main = "validate_split_graph.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "select_tests",
    srcs = [
        "gen_source_graph.py",
        "select_tests.py",
    ],
    data = ["impact_rules.json"],
    main = "select_tests.py",
    visibility = ["//visibility:public"],
)
